Fazer paginação em produtos e em vendas